--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1{
     padding: 20px;
     background: #f5f5f5;
     border-radius: 10px;
-    width: 450px;
+    width: 600px;
     margin: 0 auto;
 }
 
@@ -44,7 +44,7 @@ label{
 }
 
 input[type="text"]{
-    width: 65%;
+    width: 100%;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
@@ -55,6 +55,15 @@ input[type="text"]{
 input[type="text"]:focus{
     border: 1px solid #7fa6ca;
     box-shadow: #7fa6ca 0px 0px 5px 0px;
+}
+
+select{
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    outline: none;
+    font-size: 1rem;
+    width: 50%;
 }
 
 button{
@@ -70,54 +79,77 @@ button{
 }
 
 #meteo{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
     background: #f5f5f5;
     border-radius: 10px;
     width: max-content;
     margin: 20px auto;
 }
 
-#date{
-    font-size: 1.2rem;
-    font-weight: 600;
-    margin-bottom: 10px;
+.row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.right-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.left-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: top;
 }
 
 #ville{
     font-size: 1.5rem;
     font-weight: 600;
-    margin-bottom: 5px;
+    color: #7fa6ca;
 }
-
-
-#temperature{
-    font-size: 2rem;
-    font-weight: 600;
-    margin-bottom: 5px;
-}
-
-#description{
-    font-size: 1.5rem;
-    font-weight: 600;
-    text-transform: capitalize;
-    margin-bottom: 5px;
-}
-
-.humidity{
-    font-size: 1.2rem;
-    font-weight: 600;
-    margin-bottom: 5px;
-}
-
-.wind{
-    font-size: 1.2rem;
-    font-weight: 600;
-    margin-bottom: 5px;
-}
-
 #icon{
-    background: #7fa6ca;
+    background-color: #7fa6ca;
     border-radius: 50%;
+}
+#temperature{
+    font-size: 3rem;
+    color: #7fa6ca;
+}
+
+.rain, .humidity, .wind{
+    font-size: 0.8rem;
+    color: rgb(96, 96, 96)
+}
+#date{
+    font-size: 1.2rem;
+    color: rgb(96, 96, 96)
+}
+#description{
+    font-size: 1.2rem;
+    color: rgb(96, 96, 96)
+}
+
+.row-previews{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.preview{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.icon{
+    background-color: #7fa6ca;
+    border-radius: 50%;
+}
+
+.preview .icon img{
+    width: 60px;
+    height: 60px;
 }
